crates/tuna/tests/parser/fail/class-super-primitive.som
"test:
fail: true
"

" `primitive` is not a valid class name "
SuperPrimitive = primitive ()
